--- a/vsprojects/multi_type_vector_default/multi_type_vector_default.vcproj
+++ b/vsprojects/multi_type_vector_default/multi_type_vector_default.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="C:\Users\Kohei\Workspace\multidimalgorithm\include;C:\dev\boost_1_42_0"
+				AdditionalIncludeDirectories="..\..\include;C:\dev\boost_1_42_0"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
