--- a/vsprojects/flat_segment_tree/flat_segment_tree.vcproj
+++ b/vsprojects/flat_segment_tree/flat_segment_tree.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="flat_segment_tree"
 	ProjectGUID="{DE2B238C-D05D-4FB1-AC00-B4B847F43B1C}"
 	RootNamespace="flat_segment_tree"
@@ -20,6 +20,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\DefaultConfig.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -40,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;C:\dev\boost_1_42_0"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="UNIT_TEST;DEBUG_NODE_BASE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -89,6 +90,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\DefaultConfig.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -111,7 +113,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\include;C:\dev\boost_1_42_0"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="UNIT_TEST;DEBUG_NODE_BASE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
