--- a/vsprojects/multi_type_vector_default/multi_type_vector_default.vcproj
+++ b/vsprojects/multi_type_vector_default/multi_type_vector_default.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="multi_type_vector (default)"
 	ProjectGUID="{8A8EA8ED-3F6B-49FE-8B83-495EFF8E560C}"
 	RootNamespace="multi_type_vector"
@@ -20,6 +20,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\DefaultConfig.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -40,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include;C:\dev\boost_1_42_0"
+				AdditionalIncludeDirectories=""
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -88,6 +89,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\DefaultConfig.vsprops"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
 			>
@@ -177,11 +179,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\include\mdds\multi_type_vector_macro.hpp"
+				RelativePath="..\..\include\mdds\multi_type_vector_def.inl"
 				>
 			</File>
 			<File
-				RelativePath="..\..\include\mdds\multi_type_vector_def.inl"
+				RelativePath="..\..\include\mdds\multi_type_vector_macro.hpp"
 				>
 			</File>
 			<File
