--- a/vsprojects/multi_type_vector_custom/multi_type_vector_custom.vcproj
+++ b/vsprojects/multi_type_vector_custom/multi_type_vector_custom.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="multi_type_vector (custom)"
 	ProjectGUID="{9B0A2A1D-C861-4526-A4DA-F44D888AFBEF}"
 	RootNamespace="multi_type_vector_custom"
@@ -180,6 +180,10 @@
 			</File>
 			<File
 				RelativePath="..\..\include\mdds\multi_type_vector_def.inl"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\mdds\multi_type_vector_itr.hpp"
 				>
 			</File>
 			<File
