--- a/vsprojects/multi_type_matrix/multi_type_matrix.vcproj
+++ b/vsprojects/multi_type_matrix/multi_type_matrix.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="multi_type_matrix"
 	ProjectGUID="{831A2583-F85F-4AF1-9851-8978D8BC8409}"
 	RootNamespace="multi_type_matrix"
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="UNIT_TEST;DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
+				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -114,7 +114,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="UNIT_TEST;DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
+				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
