--- a/vsprojects/multi_type_vector_custom/multi_type_vector_custom.vcproj
+++ b/vsprojects/multi_type_vector_custom/multi_type_vector_custom.vcproj
@@ -42,6 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -112,6 +113,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
+				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
@@ -176,6 +178,14 @@
 			>
 			<File
 				RelativePath="..\..\include\mdds\multi_type_vector.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\mdds\multi_type_vector_custom_func1.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\include\mdds\multi_type_vector_custom_func2.hpp"
 				>
 			</File>
 			<File
