Add sorted_string_map with some basic test.

--- a/Makefile.in
+++ b/Makefile.in
@@ -43,6 +43,7 @@ HEADERS= \
 	@top_srcdir@/$(INCDIR)/mdds/rectangle_set_def.inl \
 	@top_srcdir@/$(INCDIR)/mdds/rectangle_set.hpp \
 	@top_srcdir@/$(INCDIR)/mdds/segment_tree.hpp \
+	@top_srcdir@/$(INCDIR)/mdds/sorted_string_map.hpp \
 	@top_srcdir@/$(INCDIR)/mdds/multi_type_vector.hpp \
 	@top_srcdir@/$(INCDIR)/mdds/multi_type_vector_custom_func1.hpp \
 	@top_srcdir@/$(INCDIR)/mdds/multi_type_vector_custom_func2.hpp \
@@ -72,6 +73,7 @@ TESTS_MEM = \
 	test.st.mem \
 	test.mtm.mem \
 	test.mtmatrix \
+	test.ssmap
 
 # You may add $(TESTS_MEM) if valgrind is available on your platform
 ALL_TESTS = $(TESTS)
@@ -111,6 +113,9 @@ $(OBJDIR)/multi_type_vector_test_perf.o: @top_srcdir@/$(SRCDIR)/multi_type_vecto
 $(OBJDIR)/multi_type_matrix_test.o: @top_srcdir@/$(SRCDIR)/multi_type_matrix_test.cpp $(DEPENDS)
 	$(CXX) $(CPPFLAGS) -c -o $@ @top_srcdir@/$(SRCDIR)/multi_type_matrix_test.cpp
 
+$(OBJDIR)/sorted_string_map_test.o: @top_srcdir@/$(SRCDIR)/sorted_string_map_test.cpp $(DEPENDS)
+	$(CXX) $(CPPFLAGS) -c -o $@ @top_srcdir@/$(SRCDIR)/sorted_string_map_test.cpp
+
 flat_segment_tree_test: pre $(OBJDIR)/flat_segment_tree_test.o
 	$(CXX) $(LDFLAGS) $(OBJDIR)/flat_segment_tree_test.o -o $@
 
@@ -137,6 +142,9 @@ multi_type_vector_test_perf: pre $(OBJDIR)/multi_type_vector_test_perf.o
 
 multi_type_matrix_test: pre $(OBJDIR)/multi_type_matrix_test.o
 	$(CXX) $(LDFLAGS) $(OBJDIR)/multi_type_matrix_test.o -o $@
+
+sorted_string_map_test: pre $(OBJDIR)/sorted_string_map_test.o
+	$(CXX) $(LDFLAGS) $(OBJDIR)/sorted_string_map_test.o -o $@
 
 multi_type_vector_test: multi_type_vector_test_default multi_type_vector_test_custom multi_type_vector_test_perf
 
@@ -207,6 +215,12 @@ test.mtmatrix.perf: multi_type_matrix_test
 
 test.mtmatrix.mem: multi_type_matrix_test
 	valgrind --tool=memcheck --leak-check=full ./multi_type_matrix_test func
+
+test.ssmap: sorted_string_map_test
+	./sorted_string_map_test func
+
+test.ssmap.mem: sorted_string_map_test
+	valgrind --tool=memcheck --leak-check=full ./sorted_string_map_test func
 
 test.stl: stlperf_test
 	./stlperf_test
