Set the next version and introduce API versioning.
The next release will have an API version of 1.0 and will require
C++11.

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,7 @@ SRCDIR=@SRCDIR@
 INCDIR=@INCDIR@
 MISCDIR=@MISCDIR@
 QUICKCHECKDIR=@QUICKCHECKDIR@
+INSTALL_INCDIR=@includedir@/mdds-@API_VERSION@
 
 CPPFLAGS=@CPPFLAGS@ -I$(INCDIR)
 LDFLAGS=
@@ -235,17 +236,17 @@ $(QUICKCHECKDIR)/flat_segment_tree: $(QUICKCHECKDIR)/flat_segment_tree.o pre
 	$(CXX) $(LDFLAGS) $< -o $@
 
 install: $(HEADERS)
-	install -d $(DESTDIR)@includedir@/mdds
-	install -d $(DESTDIR)@includedir@/mdds/hash_container
-	install -d $(DESTDIR)@includedir@/mdds/compat
+	install -d $(DESTDIR)$(INSTALL_INCDIR)/mdds
+	install -d $(DESTDIR)$(INSTALL_INCDIR)/mdds/hash_container
+	install -d $(DESTDIR)$(INSTALL_INCDIR)/mdds/compat
 	install -d $(DESTDIR)@docdir@
 	install -d $(DESTDIR)@datarootdir@
 	install -d $(DESTDIR)@datarootdir@/pkgconfig
-	install -m 644 @top_srcdir@/$(INCDIR)/mdds/*.hpp $(DESTDIR)@includedir@/mdds 
-	install -m 644 @top_srcdir@/$(INCDIR)/mdds/*.inl $(DESTDIR)@includedir@/mdds 
-	install -m 644 @top_srcdir@/$(INCDIR)/mdds/compat/*.hpp $(DESTDIR)@includedir@/mdds/compat 
-	install -m 644 @top_srcdir@/$(INCDIR)/mdds/hash_container/*.hpp $(DESTDIR)@includedir@/mdds/hash_container 
-	install -m 644 $(MISCDIR)/mdds.pc $(DESTDIR)@datarootdir@/pkgconfig 
+	install -m 644 @top_srcdir@/$(INCDIR)/mdds/*.hpp $(DESTDIR)$(INSTALL_INCDIR)/mdds
+	install -m 644 @top_srcdir@/$(INCDIR)/mdds/*.inl $(DESTDIR)$(INSTALL_INCDIR)/mdds
+	install -m 644 @top_srcdir@/$(INCDIR)/mdds/compat/*.hpp $(DESTDIR)$(INSTALL_INCDIR)/mdds/compat
+	install -m 644 @top_srcdir@/$(INCDIR)/mdds/hash_container/*.hpp $(DESTDIR)$(INSTALL_INCDIR)/mdds/hash_container
+	install -m 644 $(MISCDIR)/mdds.pc $(DESTDIR)@datarootdir@/pkgconfig/mdds-@API_VERSION@.pc
 	install -m 644 @top_srcdir@/AUTHORS @top_srcdir@/COPYING @top_srcdir@/NEWS @top_srcdir@/README.md @top_srcdir@/VERSION $(DESTDIR)@docdir@
 
 check: $(ALL_TESTS)
