--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,10 @@
-AC_INIT(mdds, 0.12.1, kohei.yoshida@gmail.com)
+AC_INIT(mdds, 0.13.0, kohei.yoshida@gmail.com)
 
 VERSION=AC_PACKAGE_VERSION
+API_VERSION=1.0
+
 AC_SUBST(VERSION)
+AC_SUBST(API_VERSION)
 
 PACKAGE_TARNAME=AC_PACKAGE_TARNAME
 AC_SUBST(PACKAGE_TARNAME)
