--- a/misc/mdds.pc.in
+++ b/misc/mdds.pc.in
@@ -1,7 +1,7 @@
 prefix=@prefix@
 includedir=@includedir@
 
-Name: mdds
+Name: mdds-@API_VERSION@
 Description: A collection of multi-dimensional data structure and indexing algorithm
 Version: @VERSION@
-Cflags: -I${includedir}
+Cflags: -I${includedir}/mdds-@API_VERSION@
