Make sure our internal include directory comes first during testing.
Else it might pick up the headers from the older version and bad things
may ensue...

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@ QUICKCHECKDIR=@QUICKCHECKDIR@
 INSTALL_INCDIR=@includedir@/mdds-@API_VERSION@
 INSTALL_DOCDIR=@docdir@-@API_VERSION@
 
-CPPFLAGS=@CPPFLAGS@ -I$(INCDIR)
+CPPFLAGS=-I$(INCDIR) @CPPFLAGS@
 LDFLAGS=
 
 EXECS= \
