--- a/Makefile.in
+++ b/Makefile.in
@@ -233,5 +233,7 @@ clean:
 
 build-doc:
 	@echo "Building documentation by Sphinx..."
-	sphinx-build -b html ./doc/ ./doc/_build
+	cd doc && \
+	doxygen doxygen.conf && \
+	sphinx-build -b html . ./_build
 
