Add test for the life cycles of values.
Values are now persistent in the container so that even if the original
entry instances get deleted, they will stay alive in the container.

--- a/Makefile.in
+++ b/Makefile.in
@@ -212,6 +212,9 @@ test.stl: stlperf_test
 test.trie: trie_map_test
 	./trie_map_test
 
+test.trie.mem: trie_map_test
+	valgrind --tool=memcheck --leak-check=full ./trie_map_test
+
 $(QUICKCHECKDIR)/flat_segment_tree.o: $(QUICKCHECKDIR)/flat_segment_tree.cpp $(DEPENDS)
 	$(CXX) $(CPPFLAGS) -c -o $@ $<
 
