mdds#2 switch to automake

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,29 @@
+*.o
+*.obj
+.deps/
+.dirstamp
+Makefile
+Makefile.in
+VERSION
+aclocal.m4
 autom4te.cache/
 config.log
 config.status
 configure
-Makefile
-misc/mdds.pc
-obj/
-VERSION
-
-# tests
-*_test
+depcomp
+flat_segment_tree_test
+install-sh
+misc/mdds-*.pc
+missing
+multi_type_matrix_test
 multi_type_vector_test_custom
 multi_type_vector_test_default
+multi_type_vector_test_perf
+point_quad_tree_test
+rectangle_set_test
+segment_tree_test
+sorted_string_map_test
+stlperf_test
+template_test
+test-driver
+trie_map_test
